# nowcast-platform

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  NEXT_STEP_HANDOFF.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: blocks.yaml  model.yaml
data_store_package/: .gitignore  CODEX_PROMPT.md  README.md  status.md
docs/: adding_countries_indicators.md  data_store.md  decisions.md  deployment.md  output_contract.md  plan.md  site_dashboard.md  spec.md  status.md  us_model.md
nowcast/: __init__.py  cli.py  experimental_tracking.py  fred.py  model_input.py  pipeline.py  publish.py  schemas.py  source_coverage.py  us_model.py
pipeline/: build_processed.py  discover_sources.py  update_all_data.py  update_aus.py  update_fred.py  update_international.py  validate_data_store.py
prompts/: architect.md  implement.md  replay.md  status.md
scripts/: export_source_coverage.py  run_all_countries.py  run_country.py  validate_outputs.py
site/: _headers  app.js  index.html  styles.css
specs/: candidate_mappings.csv  fred_qd_to_abs_mapping.md  macro_data_mapping.md  module_spec.md  source_discovery_summary.json
store/: manifest.json
tests/: conftest.py  test_candidate_mappings.py  test_cli.py  test_experimental_tracking.py  test_fred_md_loader.py  test_g10_assemble_panel.py  test_g10_coverage.py  test_g10_dfm.py  test_g10_experimental_publish.py  test_g10_raw_store.py  test_g10_site_adapter.py  test_g10_smoke.py  test_g10_transforms.py  test_g10_vintage.py  test_publish_contract.py  test_site_browser.py  test_site_smoke.py  test_us_model.py  (+1 more)
(+139 files in other folders)
