[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nowcast-platform"
version = "0.1.0"
description = "Multi-country nowcast publishing scaffold"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["nowcast*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
